// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Button Label
      </p>
    </section>
  </button>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Click Me!
      </p>
    </section>
  </button>
</div>
`;

exports[` 3`] = `
<button
  className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
  disabled={false}
  htmlFor={null}
  id={null}
  name={null}
  onClick={null}
  tabIndex="1"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      Standard Button
    </p>
  </section>
</button>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jLbiVd"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jLfFwi"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 fXMjwO"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cipcYr"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Round
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dFgMHf"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 gdyhaw"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid Round
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 grLJIU"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 bVMaCm"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Underlined
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kBYxOS"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kRDsvV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Plain
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jaaXRh"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kRDsvV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Bookmark
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jaaXRh"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Disabled
      </p>
    </section>
  </button>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Info
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hlLLip"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Success
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hQJNzB"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Warning
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cZdgDl"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Alert
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jLfFwi"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Standard
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jLfFwi"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid Info
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 iywOmJ"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid Success
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hqKSFU"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid Warning
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 injEsc"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Solid Alert
      </p>
    </section>
  </button>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Profile
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Expand
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Bookmark
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Add
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Print
      </p>
    </section>
  </button>
</section>
`;

exports[` 7`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fdVywh Button__LabelWrapper-sc-1v7sls2-1 gpojVE"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Profile
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fdVywh Button__LabelWrapper-sc-1v7sls2-1 gpojVE"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Expand
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fdVywh Button__LabelWrapper-sc-1v7sls2-1 gpojVE"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Bookmark
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fdVywh Button__LabelWrapper-sc-1v7sls2-1 gpojVE"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Add
      </p>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fdVywh Button__LabelWrapper-sc-1v7sls2-1 gpojVE"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Print
      </p>
    </section>
  </button>
</section>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
</section>
`;

exports[` 9`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 krZHvb Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Count Button
      </p>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
        id={null}
        label="2"
        style={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          letterSpacing="0.2px"
        >
          2
        </p>
      </div>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kaCTht"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ctpZLr Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <p
        className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
        fontSize="1em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Count Button
      </p>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
        id={null}
        label="2"
        style={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          letterSpacing="0.2px"
        >
          2
        </p>
      </div>
    </section>
  </button>
</section>
`;
